--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -60,7 +60,7 @@
 		</div>
 			
 		<a href="/signup" id="animatedbutton">
-		  Find a Tutor
+		  I'm a Student
 				<!--<button id="button" class="button-responsive"> Find a Tutor</button>	-->
 		</a>
 		<a href="/login" id="animatedbutton">
@@ -69,6 +69,10 @@
 		</a>
 		<a href="/tutorsignup" id="animatedbutton">
 		  I'm a Tutor
+			<!--<button id="tutor" class="button-responsive"> I'm a Tutor</button>	-->
+		</a>
+		<a href="#" id="animatedbutton">
+		  Find a Tutor
 			<!--<button id="tutor" class="button-responsive"> I'm a Tutor</button>	-->
 		</a>
  	</div>
