--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -69,7 +69,7 @@
       <div>
         <p></p>
       </div>
-      <div id="center_save_changes"> <%= f.submit "Save changes", class: "btn btn-primary" %> </div>
+      <div id="center_save_changes"> <%= f.submit "Save", class: "btn btn-primary" %> </div>
      
       <div>
         <p>
