--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -30,7 +30,7 @@
             </button>
           <ul class="dropdown-menu">
             <li class = "dropdown-item"><%= link_to "Profile", current_person %></li>
-            <li><%= link_to "Settings", '#' %></li>
+            <li><%= link_to "Settings", edit_person_path(@person) %></li>
             <li class="divider"></li>
             <li>
               <%= link_to "Log out", '#', method: :delete %>
@@ -53,7 +53,7 @@
             
           <div><p></p></div>
           
-          <%= link_to "Edit Profile", edit_person_path(current_person), {:style=>"color:#fff;"} %>
+          <%= link_to "Edit Profile", edit_person_path(@person), {:style=>"color:#fff;"} %>
           <div><p></p></div>
           <table style="width:240%">
             <tr>
@@ -62,7 +62,7 @@
               <th>Rate</th>
             </tr>
             <tr>
-              <td> <%= @person.name %></td> <!-- Subject.find_by(tutor_id: params[:id]) -->
+              <td> <%= Subject.all.map(&:name) %></td> <!-- Subject.find_by(tutor_id: params[:id]) -->
               <td> <%=  %> </td> 
               <td><%=  %></td>
             </tr>
