--- a/app/views/static_pages/studygroup.html.erb
+++ b/app/views/static_pages/studygroup.html.erb
@@ -41,19 +41,19 @@
       <th scope="row">1</th>
       <td>Jack</td>
       <td>Mawhinney</td>
-      <td>@pinsil</td>
+      <td>@jack</td>
     </tr>
     <tr>
       <th scope="row">2</th>
       <td>Vikram</td>
-      <td>Chinchilla</td>
-      <td>@vikrim</td>
+      <td>Chilkunda</td>
+      <td>@vikram</td>
     </tr>
     <tr>
       <th scope="row">3</th>
       <td>Adarsh</td>
-      <td>Chinchilla</td>
-      <td>@legend</td>
+      <td>Chilkunda</td>
+      <td>@adarsh</td>
     </tr>
   </tbody>
 </table>
