--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -67,8 +67,8 @@
         <%= f.label :email %>
         <%= f.email_field :email, placeholder: "example@gmail.com", class: 'form-control' %>
         
-        <%= f.label :Id_Number %>
-        <%= f.text_field :id_num, placeholder: "#123456", class: 'form-control' %>
+        <%= f.label :ID_Number %>
+        <%= f.text_field :id_num, placeholder: "123456", class: 'form-control' %>
         
         <%= f.label :grade %>
         <select class = "form-control" name="Contact[email_provider]">
@@ -83,7 +83,7 @@
         <%= f.label :password_confirmation, "Re-enter password" %>
         <%= f.password_field :password_confirmation, class: 'form-control', id: 'bottominput' %>
   
-        <%= f.submit "Create my account", class: "btn btn-primary", id: "animatedbutton" %>
+        <%= f.submit "Create my account", class: "btn btn-primary", id: "specialanimatedbutton" %>
     <% end %>
    
   </div>
