--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -39,6 +39,8 @@
       </ul>
       <a class="navbar-brand" href="/home">CV Enterprises</a>
     </div>
+      </ul>
+    </div>
   </nav>
   <% provide(:title, @person.name) %>
   <div class="row">
@@ -52,8 +54,9 @@
           <%= @person.email %>
             
           <div><p></p></div>
-          
+          <button class="btn btn-warning" id="edit_profile">
           <%= link_to "Edit Profile", edit_person_path(current_person), {:style=>"color:#fff;"} %>
+          </button>
           <div><p></p></div>
           <table style="width:240%">
             <tr>
