--- a/app/views/tutees/show.html.erb
+++ b/app/views/tutees/show.html.erb
@@ -1,4 +1,25 @@
 <% provide(:title, @tutee_person.name) %>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/help">Help</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/studygroup">Study Group</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <div class="row">
   <aside class="col-md-4">
     <section class="tutor_info">
