Ton of bug fixes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -63,17 +63,14 @@
 		  I'm a Student
 				<!--<button id="button" class="button-responsive"> Find a Tutor</button>	-->
 		</a>
-		<a href="/login" id="animatedbutton">
-		  Login
-			<!--<button id="tutor" class="button-responsive"> Login </button>-->
-		</a>
 		<a href="/tutorsignup" id="animatedbutton">
 		  I'm a Tutor
 			<!--<button id="tutor" class="button-responsive"> I'm a Tutor</button>	-->
 		</a>
-		<a href="#" id="animatedbutton">
-		  Find a Tutor
-			<!--<button id="tutor" class="button-responsive"> I'm a Tutor</button>	-->
+		<div><p></p></div>
+			<a href="/login" id="animatedbutton">
+		  Login
+			<!--<button id="tutor" class="button-responsive"> Login </button>-->
 		</a>
  	</div>
  	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
