--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -1,96 +1,50 @@
 <% provide(:title, "Create Subject") %>
-<<<<<<< HEAD
-
-<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link"  id="active" href="/home">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-          	<a class="nav-link" href="/about">About</a>
-          </li>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/help">Help</a>
-          </li>
-          
-          <% if logged_in? %>
-=======
+       <!--   % if logged_in? %> -->
+	
+	
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/about">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/help">Help</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/studygroup">Study Group</a>
-      </li>
-                <% if logged_in? %>
->>>>>>> 56e1dcb69ed8096a4dae10555709922566d7bd52
-          <li class="nav-item">
-            <a class="nav-link" href="#">Tutors</a>
-          </li>
-          <div class="dropdown">
-<<<<<<< HEAD
-            <!--<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-            <!--  Account -->
-            <!--</button>-->
-            <!--<ul class="dropdown-menu" id="createsubjectdropdown">-->
-            <!--  <li> (carrot)%= link_to "Profile", current_tutor %></li>-->
-            <!--  <li> (carrot)%= link_to "Settings", edit_tutor_path(current_tutor) %></li>-->
-            <!--  <li class="divider"></li>-->
-            <!--</ul>-->
-        </div>
-        <% else %>
-          <li><%= link_to "Log in", login_path %></li>
-        <% end %>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+        	<a class="nav-link" href="/about">About</a>
+        </li>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/help">Help</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/studygroup">Study Group</a>
+        </li>
         
-        </ul>
+        <!--<li class="nav-item">-->
+        <!--  <li><%= link_to "Tutor", '#' %></li> -->
+        <!--</li>-->
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Account
+            </button>
+          <ul class="dropdown-menu">
+            <li class = "dropdown-item"><%= link_to "Profile", current_person %></li>
+        
+            <li class="divider"></li>
+            <li>
+              <%= link_to "Log out", '#', method: :delete %>
+            </li>
+          </ul>
+      </ul>
+      </nav>
       <a class="navbar-brand" href="/home">CV Enterprises</a>
     </div>
-  </nav>
-=======
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Account 
-            </button>
-            <ul class="dropdown-menu" id="createsubjectdropdown">
-              <li><%= link_to "Profile", current_tutor %></li>
-              <li><%= link_to "Settings", edit_tutor_path(current_tutor) %></li>
-              <li class="divider"></li>
-            </ul>
-          </div>
-          <!--<li class="dropdown">-->
-          <!--  <a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
-          <!--    Account <b class="caret"></b>-->
-          <!--  </a>-->
-          <!--  <ul class="dropdown-menu">-->
-              <!--<li><%= link_to "Profile", current_tutor %></li>-->
-          <!--    <li><%= link_to "Settings", edit_tutor_path(current_tutor) %></li>-->
-          <!--    <li class="divider"></li>-->
-            
-          <!--  </ul>-->
-          <!--</li>-->
-        <% else %>
-          <li><%= link_to "Log in", login_path %></li>
-        <% end %>
-    </ul>
-  </div>
+      </ul>
+    </div>
+  
 </nav>
->>>>>>> 56e1dcb69ed8096a4dae10555709922566d7bd52
 
-<body >
-
+<body>
 <!--<h1 id="martin"><div style="background-color:lightgrey; opacity: 0.96; text-align:left; vertical-align: middle; padding:15px 15px; margin: 1% 83% 0% -1%; border-radius:25px;"> Create a subject</h1></div>-->
 
 <div class="large_content" id="createsubjectlargecontent">
@@ -126,6 +80,7 @@
         <p>
         </p>
       </div>
+      
       
     <% end %>
 
