--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -65,14 +65,14 @@
               <th>Rate</th>
             </tr>
             <tr>
-              <td> <%= Subject.all.map(&:name) %></td> <!-- Subject.find_by(tutor_id: params[:id]) -->
-              <td> <%=  %> </td> 
-              <td><%=  %></td>
+              <td> <%= Subject.first.name %></td> <!-- Subject.find_by(tutor_id: params[:id]) -->
+              <td> <%= Subject.first.date %> </td> 
+              <td><%= Subject.first.rate %></td>
             </tr>
             <tr>
-              <td><%=  %></td>
-              <td><%=  %></td> 
-              <td><%= %></td>
+              <td><%=Subject.second.name%></td>
+              <td><%= Subject.second.date %></td> 
+              <td><%= Subject.second.rate %></td>
             </tr>
           </table>
           <div>
