--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -58,7 +58,7 @@
           <%= link_to "Edit Profile", edit_person_path(@person), {:style=>"color:#fff;"} %>
           <!--<button class="btn btn-warning" id="edit_profile">-->
           <div><p></p></div>
-          <table style="width:240%">
+          <table style="width:240%" id="VisualTable">
             <tr>
               <th>Subject</th>
               <th>Date</th> 
@@ -75,6 +75,16 @@
               <td><%= Subject.second.rate %></td>
             </tr>
           </table>
+          <script>
+              function addRow() {
+               // alert('ok');
+                document.getElementById("VisualTable").insertRow(0);
+                 document.getElementById("VisualTable").insertRow(0).insertCell(0);
+                 document.getElementById("VisualTable").insertRow(0).insertCell(1);
+                  document.getElementById("VisualTable").insertRow(0).insertCell(2);
+              }
+              window.onload = addRow();
+            </script> 
           <div>
             <p></p>
           </div>
