--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -64,21 +64,13 @@
               <th>Date</th> 
               <th>Rate</th>
             </tr>
-            <tr>
-              <td> <%= Subject.first.name %></td> <!-- Subject.find_by(tutor_id: params[:id]) -->
-              <td> <%= Subject.first.date %> </td> 
-              <td><%= Subject.first.rate %></td>
-            </tr>
-            <tr>
-              <td><%=Subject.second.name%></td>
-              <td><%= Subject.second.date %></td> 
-              <td><%= Subject.second.rate %></td>
-            </tr>
+            
           </table>
           <script>
               function addRow() {
                // alert('ok');
                 document.getElementById("VisualTable").insertRow(0);
+             //    document.getElementById("VisualTable").insertRow(1);
                  document.getElementById("VisualTable").insertRow(0).insertCell(0);
                  document.getElementById("VisualTable").insertRow(0).insertCell(1);
                   document.getElementById("VisualTable").insertRow(0).insertCell(2);
