Put some code back but in comments

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -64,7 +64,16 @@
               <th>Date</th> 
               <th>Rate</th>
             </tr>
-            
+            <!--<tr>-->
+            <!--  <td> %= Subject.first.name %></td> <!-- Subject.find_by(tutor_id: params[:id]) --> -->
+            <!--  <td> %= Subject.first.date %> </td> -->
+            <!--  <td>%= Subject.first.rate %></td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+            <!--  <td>%=Subject.second.name%></td>-->
+            <!--  <td>%= Subject.second.date %></td> -->
+            <!--  <td>%= Subject.second.rate %></td>-->
+            <!--</tr>-->
           </table>
           <script>
               function addRow() {
