Random fixes/edits

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -65,7 +65,7 @@
               <th>Rate</th>
             </tr>
             <!--<tr>-->
-            <!--  <td> %= Subject.first.name %></td> <!-- Subject.find_by(tutor_id: params[:id]) --> -->
+            <!--  <td> %= Subject.first.name %></td> <!-- Subject.find_by(tutor_id: params[:id]) --> 
             <!--  <td> %= Subject.first.date %> </td> -->
             <!--  <td>%= Subject.first.rate %></td>-->
             <!--</tr>-->
