--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -55,7 +55,7 @@
   </div>
 </div>
 
-    
+<body>    
 <div class="row">
   
     <div  class="col-md-6 col-md-offset-3">
@@ -88,4 +88,5 @@
    
   </div>
 </div>
+</body>
 
