--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -29,9 +29,8 @@
               </button>
             <ul class="dropdown-menu">
               <li class = "dropdown-item"><%= link_to "Profile", current_tutor %></li>
-              <li><%= link_to "Settings", '#' %></li>
-              <li class="divider"></li>
-              <li>
+              <li class = "dropdown-item"><%= link_to "Settings", '#' %></li>
+              <li class = "dropdown-item">
                 <%= link_to "Log out", '#', method: :delete %>
               </li>
             </ul>
