--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -33,7 +33,7 @@
             <li><%= link_to "Settings", edit_person_path(@person) %></li>
             <li class="divider"></li>
             <li>
-              <%= link_to "Log out", '#', method: :delete %>
+              <%= link_to "Log out", logout_path, method: :delete %>
             </li>
           </ul>
       </ul>
