changed edit tutor page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -588,4 +588,13 @@ table, th, td {
 input, select{
 	border-radius: 20px!important;
 }
-
+.dropdown-toggle{
+	color: #007bff !important;
+}
+#tutor_signup_large_content{
+	background-image: url("https://img1.akspic.com/image/114418-skyscraper-architect-modern_architecture-day-glass-1280x1024.jpg");
+}
+#change_profile_pic{
+	height: 80px;
+	padding-top: 25px;
+}
