--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,52 +1,53 @@
 <% provide(:title, "Edit tutor") %>
-
-<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item" id="hmenu" onclick="openNav()">
-          	<div class="hmenu"> </div>
-          	<div class="hmenu"> </div>
-          	<div class="hmenu"> </div>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link"  id="active" href="/home">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-          	<a class="nav-link" href="/about">About</a>
-          </li>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/help">Help</a>
-          </li>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/help">Help</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/studygroup">Study Group</a>
+      </li>
+      <% if logged_in? %>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Tutors</a>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+            Account <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <li class="dropdown-item"><%= link_to "Profile", current_tutor %></li>
+            <li class="dropdown-item"><%= link_to "Settings", edit_tutor_path(current_tutor) %></li>
+            <li class="divider"></li>
           
-          <% if logged_in? %>
-          <li><%= link_to "Tutors", '#' %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Account <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Profile", current_tutor %></li>
-              <li><%= link_to "Settings", edit_tutor_path(current_tutor) %></li>
-              <li class="divider"></li>
-            
-            </ul>
-          </li>
-        <% else %>
-          <li><%= link_to "Log in", login_path %></li>
-        <% end %>
-      </ul>
-        
-        </ul>
-      <a class="navbar-brand" href="/home">CV Enterprises</a>
-    </div>
-  </nav>
+          </ul>
+        </li>
+      <% else %>
+        <li><%= link_to "Log in", login_path %></li>
+      <% end %>
+    </ul>
+    <a class="navbar-brand" href="/home">CV Enterprises</a>
+  </div>
+</nav>
 
+<!--<h1 id="martin"><div style="background-color:lightgrey; opacity: 0.96; text-align:left; vertical-align: middle; padding:15px 15px; margin: 1% 70% 0% -1%; border-radius:25px;"> Update your profile </h1></div>-->
 
-<h1 id="martin"><div style="background-color:lightgrey; opacity: 0.96; text-align:left; vertical-align: middle; padding:15px 15px; margin: 1% 70% 0% -1%; border-radius:25px;"> Update your profile </h1></div>
+<div class="large_content" id="tutor_signup_large_content">
+    <h1>Update Your Profile</h1>
 
+</div>
 
-<div id="martin" class="row">
+<div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@person) do |f| %>
       <%= render 'shared/error_messages' %>
@@ -70,10 +71,11 @@
       
       <div class="gravatar_edit", id="center_save_changes">
         <%= gravatar_for @person %>
-        <a href="http://gravatar.com/emails" target="_blank">Change Profile Picture</a>
-        <p></p>
+        <a href="http://gravatar.com/emails" target="_blank">
+          <span class="btn btn-warning" id="change_profile_pic">Change Profile Picture</span>
+        </a>
       </div>
-    
+    <br>
       <div id="center_save_changes"> <%= f.submit "Save changes", class: "btn btn-primary" %> </div>
      
       <div>
