--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -55,7 +55,7 @@
             
           <div><p></p></div>
           
-          <%= link_to "Edit Profile", edit_person_path(@person), {:style=>"color:#fff;"} %>
+          <%= link_to "Edit Profile", edit_person_path(@person), {:style=>"color:#fff;"} %> <!--Edit:'(@oerson)' is redundant after edit_person_path because the edit method in people_controller defines @person -->
 
           <!--<button class="btn btn-warning" id="edit_profile">-->
 
@@ -92,9 +92,10 @@
           <div>
             <p></p>
           </div>
-          <a href="/subjectcreate">
-            <button type="button" class="btn btn-primary" id="createsubjectbutton">Create Subject</button>
-          </a>
+          <%= link_to "Create Subject", subject_path(@person), {:style=>"color:#fff;"} %>
+          <!--<a href="/subjectcreate">-->
+          <!--  <button type="button" class="btn btn-primary" id="createsubjectbutton">Create Subject</button>-->
+          <!--</a>-->
           </div>
         </h1>
       </section>
