--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -30,10 +30,10 @@
             </button>
           <ul class="dropdown-menu">
             <li class = "dropdown-item"><%= link_to "Profile", current_person %></li>
-            <li><%= link_to "Settings", edit_person_path(@person) %></li>
+            <li class = "dropdown-item"><%= link_to "Settings", edit_person_path(@person) %></li>
             <li class="divider"></li>
-            <li>
-              <%= link_to "Log out", '#', method: :delete %>
+            <li class = "dropdown-item">
+              <%= link_to "Log out", logout_path, method: :delete %>
             </li>
           </ul>
       </ul>
@@ -56,13 +56,10 @@
           <div><p></p></div>
           
           <%= link_to "Edit Profile", edit_person_path(@person), {:style=>"color:#fff;"} %>
-<<<<<<< HEAD
+
           <!--<button class="btn btn-warning" id="edit_profile">-->
-=======
-          <button class="btn btn-warning" id="edit_profile">
-          <%= link_to "Edit Profile", edit_person_path(current_person), {:style=>"color:#fff;"} %>
-          </button>
->>>>>>> 42dc3b2785e02ad3efba5265c8efe72c5127c367
+
+
           <div><p></p></div>
           <table style="width:240%" id="VisualTable">
             <tr>
@@ -70,9 +67,8 @@
               <th>Date</th> 
               <th>Rate</th>
             </tr>
-<<<<<<< HEAD
             <!--<tr>-->
-            <!--  <td> %= Subject.first.name %></td> <!-- Subject.find_by(tutor_id: params[:id]) --> -->
+            <!--  <td> %= Subject.first.name %></td> <!-- Subject.find_by(tutor_id: params[:id]) --> 
             <!--  <td> %= Subject.first.date %> </td> -->
             <!--  <td>%= Subject.first.rate %></td>-->
             <!--</tr>-->
@@ -93,19 +89,6 @@
               }
               window.onload = addRow();
             </script> 
-=======
-            <tr>
-              <td> <%= @person.name %></td> <!-- Subject.find_by(tutor_id: params[:id]) -->
-              <td> <%=  %> </td> 
-              <td><%=  %></td>
-            </tr>
-            <tr>
-              <td><%=  %></td>
-              <td><%=  %></td> 
-              <td><%= %></td>
-            </tr>
-          </table>
->>>>>>> 42dc3b2785e02ad3efba5265c8efe72c5127c367
           <div>
             <p></p>
           </div>
