--- a/app/views/people/subject.html.erb
+++ b/app/views/people/subject.html.erb
@@ -24,11 +24,11 @@
         <!--  <li><%= link_to "Tutor", '#' %></li> -->
         <!--</li>-->
         <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Account
             </button>
           <ul class="dropdown-menu">
-            <li class = "dropdown-item"><%= link_to "Profile", current_person %></li>
+            <li class = "dropdown-item"><%= link_to "Profile", show_person_path %></li>
         
             <li class="divider"></li>
             <li>
