--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -24,7 +24,7 @@
         <!--  <li><%= link_to "Tutor", '#' %></li> -->
         <!--</li>-->
         <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Account
             </button>
           <ul class="dropdown-menu">
