--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -25,7 +25,7 @@
         <!--  <li><%= link_to "Tutor", '#' %></li> -->
         <!--</li>-->
         <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Account
             </button>
           <ul class="dropdown-menu">
@@ -55,7 +55,7 @@
             
           <div><p></p></div>
           
-          <%= link_to "Edit Profile", edit_person_path(@person), {:style=>"color:#fff;"} %>
+          <%= link_to "Edit Profile", edit_person_path(@person), {:style=>"color:#fff;"} %> <!--Edit:'(@oerson)' is redundant after edit_person_path because the edit method in people_controller defines @person -->
 
           <!--<button class="btn btn-warning" id="edit_profile">-->
 
@@ -92,9 +92,10 @@
           <div>
             <p></p>
           </div>
-          <a href="/subjectcreate">
-            <button type="button" class="btn btn-primary" id="createsubjectbutton">Create Subject</button>
-          </a>
+          <%= link_to "Create Subject", person_subject_path, {:style=>"color:#fff;"} %>
+          <!--<a href="/subjectcreate">-->
+          <!--  <button type="button" class="btn btn-primary" id="createsubjectbutton">Create Subject</button>-->
+          <!--</a>-->
           </div>
         </h1>
       </section>
