--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -92,10 +92,10 @@
           <div>
             <p></p>
           </div>
-          <%= link_to "Create Subject", person_subject_path, {:style=>"color:#fff;"} %>
-          <!--<a href="/subjectcreate">-->
-          <!--  <button type="button" class="btn btn-primary" id="createsubjectbutton">Create Subject</button>-->
-          <!--</a>-->
+          <!--%= link_to "Create Subject", 'subjectcreate_path', {:style=>"color:#fff;"} %>-->
+          <a href="/subjectcreate">
+            <button type="button" class="btn btn-primary" id="createsubjectbutton">Create Subject</button>
+          </a>
           </div>
         </h1>
       </section>
