made small change

--- a/app/views/static_pages/findatutor.html.erb
+++ b/app/views/static_pages/findatutor.html.erb
@@ -15,7 +15,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
@@ -26,6 +26,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/studygroup">Study Group</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/findatutor">Find a Tutor</a>
       </li>
     </ul>
   </div>
