Can go back to profile from subject create page

--- a/app/views/people/subject.html.erb
+++ b/app/views/people/subject.html.erb
@@ -28,7 +28,7 @@
               Account
             </button>
           <ul class="dropdown-menu">
-            <li class = "dropdown-item"><%= link_to "Profile", show_person_path %></li>
+            <li class = "dropdown-item"><%= link_to "Profile", edit_person_path(1) %></li>
         
             <li class="divider"></li>
             <li>
