--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -26,7 +26,7 @@
               Account
             </button>
           <ul class="dropdown-menu">
-            <li class = "dropdown-item"><%= link_to "Profile", person_path(1) %></li>
+            <li class = "dropdown-item"><%= link_to "Profile", person_path(Person.find_by(id: session[:tutor_id])) %></li>
         
             <li class="divider"></li>
             <li>
