fixed some code not allowing admins to see all users

--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -2,7 +2,7 @@
   <%= gravatar_for person, size: 50 %>
   <%= link_to person.name, person %>
   
-   <% if current_person.admin? && !current_person?(person) %>
+   <% if Person.find_by(id: session[:tutor_id]).admin? && !current_person?(person) %> <!-- !Person.find_by(id: session[:tutor_id])?(person) *should be where current_person?(person) is, doesn't work for some reason* -->
     | <%= link_to "delete", person, method: :delete,
                                   data: { confirm: "Are you sure?" } %>
   <% end %>
