--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -67,6 +67,10 @@
 		  I'm a Tutor
 			<!--<button id="tutor" class="button-responsive"> I'm a Tutor</button>	-->
 		</a>
+		<a href="/findatutor" id="animatedbutton">
+		  Find a tutor
+			<!--<button id="tutor" class="button-responsive"> I'm a Tutor</button>	-->
+		</a>
 		<div><p></p></div>
 			<a href="/login" id="animatedbutton">
 		  Login
