added css as per the dark lords instructions

--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -2,8 +2,10 @@
        <!--   % if logged_in? %> -->
 	
 	
+
+<body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
+    <!--<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">-->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
@@ -26,7 +28,7 @@
               Account
             </button>
           <ul class="dropdown-menu">
-            <li class = "dropdown-item"><%= link_to "Profile", person_path(Person.find_by(id: session[:tutor_id])) %></li>
+            <li class = "dropdown-item"><%= link_to "Profile", person_path(1) %></li>
         
             <li class="divider"></li>
             <li>
@@ -39,10 +41,7 @@
     </div>
       </ul>
     </div>
-  
 </nav>
-
-<body>
 <!--<h1 id="martin"><div style="background-color:lightgrey; opacity: 0.96; text-align:left; vertical-align: middle; padding:15px 15px; margin: 1% 83% 0% -1%; border-radius:25px;"> Create a subject</h1></div>-->
 
 <div class="large_content" id="createsubjectlargecontent">
