--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -601,3 +601,36 @@ input, select{
 .flash{
 	padding-top: 250px;
 }
+
+//admin tutors page
+ul.tutors{
+	list-style: none;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	text-align: left;
+}
+ul.tutors li{
+	// margin-bottom: 10px;
+	border: 1px solid black;
+	border-bottom: none;
+	color: black;
+	width: auto;
+	padding: 10px;
+	background-color: transparent;
+}
+ul.tutors li:last-child{
+	border-bottom: 1px solid black;
+}
+ul.tutors li:hover{
+	outline: #4d90fe solid 1px;
+	background-color: #e8f0fe;
+	border-top: 1px solid white;
+}
+ul.tutors li img{
+	width: 40px;
+}
+#admintutors{
+	background-image: url("https://images.unsplash.com/photo-1518837695005-2083093ee35b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+	background-size: cover;
+}
