--- a/app/views/study_groups/new.html.erb
+++ b/app/views/study_groups/new.html.erb
@@ -38,7 +38,7 @@
         <%= f.text_field :creatorName, placeholder: "Joe Falcon",class: 'form-control' %>
         
         <%= f.label :date, "Date" %>
-        <%= f.email_field :date, placeholder: "mm/dd/yy", class: 'form-control' %>
+        <%= f.text_field :date, placeholder: "mm/dd/yy", class: 'form-control' %>
         
         <%= f.label :location, "Location" %>
         <%= f.text_field :location, placeholder: "La Crescenta Library", class: 'form-control' %>
