--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -634,3 +634,9 @@ ul.tutors li img{
 	background-image: url("https://images.unsplash.com/photo-1518837695005-2083093ee35b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
 	background-size: cover;
 }
+#VisualTable{
+	color: white;
+}
+#VisualSubjects{
+	color: white;
+}
