--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -61,33 +61,36 @@
 
 
           <div><p></p></div>
-           <script>
-              function addRow() {
-               // alert('ok');
-                document.getElementById("VisualTable").insertRow(-1);
-             //    document.getElementById("VisualTable").insertRow(1);
-                 document.getElementById("VisualTable").insertRow().insertCell(0);
-                 document.getElementById("VisualTable").insertRow().insertCell(1);
-                  document.getElementById("VisualTable").insertRow().insertCell(2);
-              }
-              window.onload = addRow();
-            </script> 
+           <!--<script>-->
+           <!--   function addRow() {-->
+           <!--     alert('ok');-->
+           <!--     document.getElementById("VisualTable").insertRow(-1);-->
+           <!--      document.getElementById("VisualTable").insertRow(1);-->
+           <!--      document.getElementById("VisualTable").insertRow().insertCell(0);-->
+           <!--      document.getElementById("VisualTable").insertRow().insertCell(1);-->
+           <!--       document.getElementById("VisualTable").insertRow().insertCell(2);-->
+           <!--   }-->
+           <!--   window.onload = addRow();-->
+           <!-- </script> -->
           <table style="width:180%" id="VisualTable">
             <tr>
-              <th>My subjects</th>
-              <th>Date</th> 
+              <th  style="width:44.6%">My subjects</th>
+              <th style="width:28.2%">Date</th> 
               <th>Rate</th>
             </tr>
             
               <% Subject.all.each do |i| %>
                 <% if i.creatorid == session[:tutor_id] %>
                  
-                  <table style="width:180%" id="VisualSubjects">
+                  <table style="width:180%" id="VisualSubjects">   <!-- NOTE: I'm creating a new table here instead of adding a row because for some reason it won't add a row to the existing table and display the name, date, and rate outside the table -->
                     <tr>
                       <th style="width:44.6%"> <%= i.name %></th>
                       <th style="width:28.2%"> <%= i.date %></th> 
                       <th> <%= i.rate %></th>
                     </tr>
+                    <%# session[:selected_subject_id] = i.id %>
+                     <%= link_to "delete", i, method: :delete,
+                                  data: { confirm: "Are you sure?" } %>
                   </table>
                 <% end %>
               <% end %>
