Added stuff to download an excel sheet of all people and related info

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -71,6 +71,10 @@
 		  Find a tutor
 			<!--<button id="tutor" class="button-responsive"> I'm a Tutor</button>	-->
 		</a>
+			<a href="/download" id="animatedbutton">
+		  Download
+			<!--<button id="tutor" class="button-responsive"> I'm a Tutor</button>	-->
+		</a>
 		<div><p></p></div>
 			<a href="/login" id="animatedbutton">
 		  Login
