--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -70,12 +70,13 @@
         <%= f.text_field :id_num, placeholder: "123456", class: 'form-control' %>
         
         <%= f.label :grade %>
-        <select class = "form-control" name="Contact[email_provider]">
-          <option>9</option>
-          <option>10</option>
-          <option>11</option>
-          <option>12</option>
-        </select>
+         <%= f.text_field :grade, placeholder: '12', class: 'form-control' %>
+        <!--<select class = "form-control" name="Contact[email_provider]">-->
+        <!--  <option>9</option>-->
+        <!--  <option>10</option>-->
+        <!--  <option>11</option>-->
+        <!--  <option>12</option>-->
+        <!--</select>-->
         <%= f.label :password %>
         <%= f.password_field :password, class: 'form-control' %>
         <br>
