--- a/app/views/tutors/signup.html.erb
+++ b/app/views/tutors/signup.html.erb
@@ -34,12 +34,14 @@
       <%= f.text_field :name, class: 'form-control' %>
       
       <%= f.label :grade %>
-      <select class = "form-control" name="Contact[email_provider]">
-        <option>9</option>
-        <option>10</option>
-        <option>11</option>
-        <option>12</option>
-      </select>
+      <%= f.text_field :grade, placeholder: '12', class: 'form-control' %>
+      <!--<select class = "form-control" name="Contact[email_provider]">-->
+      <!--  <option>SELECT</option>-->
+      <!--  <option>9</option>-->
+      <!--  <option>10</option>-->
+      <!--  <option>11</option>-->
+      <!--  <option>12</option>-->
+      <!--</select>-->
       
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
