--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -27,6 +27,28 @@
       <li class="nav-item">
         <a class="nav-link" href="/studygroup">Study Group</a>
       </li>
+      <% if session[:tutor_id] %>
+        <div class="dropdown">
+            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Account
+            </button>
+          <ul class="dropdown-menu">
+            <li class = "dropdown-item"><%= link_to "Profile", person_path(Person.find_by(id: session[:tutor_id])) %></li>
+        
+            <li class="divider"></li>
+            <li>
+              <%= link_to "Log out", logout_path, method: :delete %>
+            </li>
+          </ul>
+      </ul>
+      
+      <a class="navbar-brand" href="/home">CV Enterprises</a>
+    </div>
+    </nav>
+      <% else %>
+        
+      <% end %>
+      
     </ul>
   </div>
 </nav>
